[package]
name = "rimbevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", features = [
  "dynamic_linking",
] }
geo = "0.28.0"
ndarray = "0.15.6"
noise = "0.9.0"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
